--- a/Charm/makefile
+++ b/Charm/makefile
@@ -2,10 +2,10 @@ CHARMDIR = ../../charm/
 CHARMC = $(CHARMDIR)/bin/charmc $(OPTS)
 
 default: all
-all: node
+all: Node
 
-node : main.o Node.o
-	$(CHARMC) -language charm++ -o node main.o Node.o
+Node : main.o Node.o
+	$(CHARMC) -language charm++ -o Node main.o Node.o
 
 main.o : main.C main.h main.decl.h main.def.h Node.decl.h
 	$(CHARMC) -o main.o main.C
