--- a/Charm/Makefile
+++ b/Charm/Makefile
@@ -5,15 +5,13 @@ default: all
 all: Main
 
 Main : Main.o Node.o Parser.o StringNode.o
-	$(CHARMC) -language charm++ -o Node Main.o Node.o Parser.o StringNode.o
+	$(CHARMC) -language charm++ -o Main Main.o Node.o Parser.o StringNode.o
 
-Main.o : Main.C Main.h Main.decl.h Main.def.h Node.decl.h Parser.decl.h StringNode.decl.h
+Main.o : Main.C Main.h Main.decl.h Main.def.h Node.decl.h Parser.decl.h
 	$(CHARMC) -o Main.o Main.C
 
 Main.decl.h Main.def.h : Main.ci
 	$(CHARMC) Main.ci
-
-Main.h: Node.decl.h Parser.decl.h
 
 Node.o : Node.C Node.h Node.decl.h Node.def.h
 	$(CHARMC) -o Node.o Node.C
@@ -21,13 +19,11 @@ Node.o : Node.C Node.h Node.decl.h Node.def.h
 Node.decl.h Node.def.h : Node.ci
 	$(CHARMC) Node.ci
 
-Parser.o : Parser.C Parser.h Parser.decl.h Parser.def.h StringNode.decl.h
+Parser.o : Parser.C Parser.h Parser.decl.h Parser.def.h StringNode.decl.h Node.decl.h
 	$(CHARMC) -o Parser.o Parser.C
 
-Parser.decl.h Parser.def.h : Parser.ci
+Parser.decl.h Parser.def.h : Parser.ci StringNode.decl.h Node.decl.h
 	$(CHARMC) Parser.ci
-
-Parser.h : StringNode.decl.h
 
 StringNode.o : StringNode.C StringNode.h StringNode.decl.h StringNode.def.h
 	$(CHARMC) -o StringNode.o StringNode.C
