--- a/test/premier/Makefile
+++ b/test/premier/Makefile
@@ -1,62 +1,301 @@
-list.txt:	list1.txt list2.txt list3.txt list4.txt list5.txt list6.txt list7.txt list8.txt list9.txt list10.txt list11.txt list12.txt list13.txt list14.txt list15.txt list16.txt list17.txt list18.txt list19.txt list20.txt 
-	cp list1.txt list.txt ; cat list2.txt >> list.txt ; cat list3.txt >> list.txt ; cat list4.txt >> list.txt ; cat list5.txt >> list.txt ; cat list6.txt >> list.txt ; cat list7.txt >> list.txt ; cat list8.txt >> list.txt ; cat list9.txt >> list.txt ; cat list10.txt >> list.txt ; cat list11.txt >> list.txt ; cat list12.txt >> list.txt ; cat list13.txt >> list.txt ; cat list14.txt >> list.txt ; cat list15.txt >> list.txt ; cat list16.txt >> list.txt ; cat list17.txt >> list.txt ; cat list18.txt >> list.txt ; cat list19.txt >> list.txt ; cat list20.txt >> list.txt ;
-
+list.txt:	 list1.txt list2.txt list3.txt list4.txt list5.txt list6.txt list7.txt list8.txt list9.txt list10.txt list11.txt list12.txt list13.txt list14.txt list15.txt list16.txt list17.txt list18.txt list19.txt list20.txt list21.txt list22.txt list23.txt list24.txt list25.txt list26.txt list27.txt list28.txt list29.txt list30.txt list31.txt list32.txt list33.txt list34.txt list35.txt list36.txt list37.txt list38.txt list39.txt list40.txt list41.txt list42.txt list43.txt list44.txt list45.txt list46.txt list47.txt list48.txt list49.txt list50.txt list51.txt list52.txt list53.txt list54.txt list55.txt list56.txt list57.txt list58.txt list59.txt list60.txt list61.txt list62.txt list63.txt list64.txt list65.txt list66.txt list67.txt list68.txt list69.txt list70.txt list71.txt list72.txt list73.txt list74.txt list75.txt list76.txt list77.txt list78.txt list79.txt list80.txt list81.txt list82.txt list83.txt list84.txt list85.txt list86.txt list87.txt list88.txt list89.txt list90.txt list91.txt list92.txt list93.txt list94.txt list95.txt list96.txt list97.txt list98.txt list99.txt list100.txt	
+	cp list1.txt list.txt; cat list2.txt >> list.txt; cat list3.txt >> list.txt; cat list4.txt >> list.txt; cat list5.txt >> list.txt; cat list6.txt >> list.txt; cat list7.txt >> list.txt; cat list8.txt >> list.txt; cat list9.txt >> list.txt; cat list10.txt >> list.txt; cat list11.txt >> list.txt; cat list12.txt >> list.txt; cat list13.txt >> list.txt; cat list14.txt >> list.txt; cat list15.txt >> list.txt; cat list16.txt >> list.txt; cat list17.txt >> list.txt; cat list18.txt >> list.txt; cat list19.txt >> list.txt; cat list20.txt >> list.txt; cat list21.txt >> list.txt; cat list22.txt >> list.txt; cat list23.txt >> list.txt; cat list24.txt >> list.txt; cat list25.txt >> list.txt; cat list26.txt >> list.txt; cat list27.txt >> list.txt; cat list28.txt >> list.txt; cat list29.txt >> list.txt; cat list30.txt >> list.txt; cat list31.txt >> list.txt; cat list32.txt >> list.txt; cat list33.txt >> list.txt; cat list34.txt >> list.txt; cat list35.txt >> list.txt; cat list36.txt >> list.txt; cat list37.txt >> list.txt; cat list38.txt >> list.txt; cat list39.txt >> list.txt; cat list40.txt >> list.txt; cat list41.txt >> list.txt; cat list42.txt >> list.txt; cat list43.txt >> list.txt; cat list44.txt >> list.txt; cat list45.txt >> list.txt; cat list46.txt >> list.txt; cat list47.txt >> list.txt; cat list48.txt >> list.txt; cat list49.txt >> list.txt; cat list50.txt >> list.txt; cat list51.txt >> list.txt; cat list52.txt >> list.txt; cat list53.txt >> list.txt; cat list54.txt >> list.txt; cat list55.txt >> list.txt; cat list56.txt >> list.txt; cat list57.txt >> list.txt; cat list58.txt >> list.txt; cat list59.txt >> list.txt; cat list60.txt >> list.txt; cat list61.txt >> list.txt; cat list62.txt >> list.txt; cat list63.txt >> list.txt; cat list64.txt >> list.txt; cat list65.txt >> list.txt; cat list66.txt >> list.txt; cat list67.txt >> list.txt; cat list68.txt >> list.txt; cat list69.txt >> list.txt; cat list70.txt >> list.txt; cat list71.txt >> list.txt; cat list72.txt >> list.txt; cat list73.txt >> list.txt; cat list74.txt >> list.txt; cat list75.txt >> list.txt; cat list76.txt >> list.txt; cat list77.txt >> list.txt; cat list78.txt >> list.txt; cat list79.txt >> list.txt; cat list80.txt >> list.txt; cat list81.txt >> list.txt; cat list82.txt >> list.txt; cat list83.txt >> list.txt; cat list84.txt >> list.txt; cat list85.txt >> list.txt; cat list86.txt >> list.txt; cat list87.txt >> list.txt; cat list88.txt >> list.txt; cat list89.txt >> list.txt; cat list90.txt >> list.txt; cat list91.txt >> list.txt; cat list92.txt >> list.txt; cat list93.txt >> list.txt; cat list94.txt >> list.txt; cat list95.txt >> list.txt; cat list96.txt >> list.txt; cat list97.txt >> list.txt; cat list98.txt >> list.txt; cat list99.txt >> list.txt; cat list100.txt >> list.txt
 list1.txt:
-	./premier 2 `echo 1*200000000/20-1 |bc` > list1.txt
+	./premier 2 `echo N*NMAX*10000000/(NMAX-1) |bc` > list1.txt
 
-list2.txt: 
-	./premier `echo 1*200000000/20 |bc` `echo 2*200000000/20-1 |bc` > list2.txt
+list2.txt:
+	./premier `echo 2-1*100*10000000/100 |bc` `echo 2*100*10000000/100-1 |bc` > list2.txt
 
 list3.txt:
-	./premier `echo 2*200000000/20 |bc` `echo 3*200000000/20-1 |bc` > list3.txt
+	./premier `echo 3-1*100*10000000/100 |bc` `echo 3*100*10000000/100-1 |bc` > list3.txt
 
-list4.txt:  
-	./premier `echo 3*200000000/20 |bc` `echo 4*200000000/20-1 |bc` > list4.txt
+list4.txt:
+	./premier `echo 4-1*100*10000000/100 |bc` `echo 4*100*10000000/100-1 |bc` > list4.txt
 
-list5.txt:  
-	./premier `echo 4*200000000/20 |bc` `echo 5*200000000/20-1 |bc` > list5.txt
+list5.txt:
+	./premier `echo 5-1*100*10000000/100 |bc` `echo 5*100*10000000/100-1 |bc` > list5.txt
 
-list6.txt:  
-	./premier `echo 5*200000000/20 |bc` `echo 6*200000000/20-1 |bc` > list6.txt
+list6.txt:
+	./premier `echo 6-1*100*10000000/100 |bc` `echo 6*100*10000000/100-1 |bc` > list6.txt
 
-list7.txt:  
-	./premier `echo 6*200000000/20 |bc` `echo 7*200000000/20-1 |bc` > list7.txt
+list7.txt:
+	./premier `echo 7-1*100*10000000/100 |bc` `echo 7*100*10000000/100-1 |bc` > list7.txt
 
-list8.txt:  
-	./premier `echo 7*200000000/20 |bc` `echo 8*200000000/20-1 |bc` > list8.txt
+list8.txt:
+	./premier `echo 8-1*100*10000000/100 |bc` `echo 8*100*10000000/100-1 |bc` > list8.txt
 
-list9.txt:  
-	./premier `echo 8*200000000/20 |bc` `echo 9*200000000/20-1 |bc` > list9.txt
+list9.txt:
+	./premier `echo 9-1*100*10000000/100 |bc` `echo 9*100*10000000/100-1 |bc` > list9.txt
 
-list10.txt:  
-	./premier `echo 9*200000000/20 |bc` `echo 10*200000000/20-1 |bc` > list10.txt
+list10.txt:
+	./premier `echo 10-1*100*10000000/100 |bc` `echo 10*100*10000000/100-1 |bc` > list10.txt
 
-list11.txt:  
-	./premier `echo 10*200000000/20 |bc` `echo 11*200000000/20-1 |bc` > list11.txt
+list11.txt:
+	./premier `echo 11-1*100*10000000/100 |bc` `echo 11*100*10000000/100-1 |bc` > list11.txt
 
-list12.txt:  
-	./premier `echo 11*200000000/20 |bc` `echo 12*200000000/20-1 |bc` > list12.txt
+list12.txt:
+	./premier `echo 12-1*100*10000000/100 |bc` `echo 12*100*10000000/100-1 |bc` > list12.txt
 
-list13.txt:  
-	./premier `echo 12*200000000/20 |bc` `echo 13*200000000/20-1 |bc` > list13.txt
+list13.txt:
+	./premier `echo 13-1*100*10000000/100 |bc` `echo 13*100*10000000/100-1 |bc` > list13.txt
 
-list14.txt:  
-	./premier `echo 13*200000000/20 |bc` `echo 14*200000000/20-1 |bc` > list14.txt
+list14.txt:
+	./premier `echo 14-1*100*10000000/100 |bc` `echo 14*100*10000000/100-1 |bc` > list14.txt
 
-list15.txt:  
-	./premier `echo 14*200000000/20 |bc` `echo 15*200000000/20-1 |bc` > list15.txt
+list15.txt:
+	./premier `echo 15-1*100*10000000/100 |bc` `echo 15*100*10000000/100-1 |bc` > list15.txt
 
-list16.txt: 
-	./premier `echo 15*200000000/20 |bc` `echo 16*200000000/20-1 |bc` > list16.txt
+list16.txt:
+	./premier `echo 16-1*100*10000000/100 |bc` `echo 16*100*10000000/100-1 |bc` > list16.txt
 
-list17.txt: 
-	./premier `echo 16*200000000/20 |bc` `echo 17*200000000/20-1 |bc` > list17.txt
+list17.txt:
+	./premier `echo 17-1*100*10000000/100 |bc` `echo 17*100*10000000/100-1 |bc` > list17.txt
 
-list18.txt: 
-	./premier `echo 17*200000000/20 |bc` `echo 18*200000000/20-1 |bc` > list18.txt
+list18.txt:
+	./premier `echo 18-1*100*10000000/100 |bc` `echo 18*100*10000000/100-1 |bc` > list18.txt
 
-list19.txt: 
-	./premier `echo 18*200000000/20 |bc` `echo 19*200000000/20-1 |bc` > list19.txt
+list19.txt:
+	./premier `echo 19-1*100*10000000/100 |bc` `echo 19*100*10000000/100-1 |bc` > list19.txt
 
-list20.txt: 
-	./premier `echo 19*200000000/20 |bc` `echo 20*200000000/20-1 |bc` > list20.txt
+list20.txt:
+	./premier `echo 20-1*100*10000000/100 |bc` `echo 20*100*10000000/100-1 |bc` > list20.txt
+
+list21.txt:
+	./premier `echo 21-1*100*10000000/100 |bc` `echo 21*100*10000000/100-1 |bc` > list21.txt
+
+list22.txt:
+	./premier `echo 22-1*100*10000000/100 |bc` `echo 22*100*10000000/100-1 |bc` > list22.txt
+
+list23.txt:
+	./premier `echo 23-1*100*10000000/100 |bc` `echo 23*100*10000000/100-1 |bc` > list23.txt
+
+list24.txt:
+	./premier `echo 24-1*100*10000000/100 |bc` `echo 24*100*10000000/100-1 |bc` > list24.txt
+
+list25.txt:
+	./premier `echo 25-1*100*10000000/100 |bc` `echo 25*100*10000000/100-1 |bc` > list25.txt
+
+list26.txt:
+	./premier `echo 26-1*100*10000000/100 |bc` `echo 26*100*10000000/100-1 |bc` > list26.txt
+
+list27.txt:
+	./premier `echo 27-1*100*10000000/100 |bc` `echo 27*100*10000000/100-1 |bc` > list27.txt
+
+list28.txt:
+	./premier `echo 28-1*100*10000000/100 |bc` `echo 28*100*10000000/100-1 |bc` > list28.txt
+
+list29.txt:
+	./premier `echo 29-1*100*10000000/100 |bc` `echo 29*100*10000000/100-1 |bc` > list29.txt
+
+list30.txt:
+	./premier `echo 30-1*100*10000000/100 |bc` `echo 30*100*10000000/100-1 |bc` > list30.txt
+
+list31.txt:
+	./premier `echo 31-1*100*10000000/100 |bc` `echo 31*100*10000000/100-1 |bc` > list31.txt
+
+list32.txt:
+	./premier `echo 32-1*100*10000000/100 |bc` `echo 32*100*10000000/100-1 |bc` > list32.txt
+
+list33.txt:
+	./premier `echo 33-1*100*10000000/100 |bc` `echo 33*100*10000000/100-1 |bc` > list33.txt
+
+list34.txt:
+	./premier `echo 34-1*100*10000000/100 |bc` `echo 34*100*10000000/100-1 |bc` > list34.txt
+
+list35.txt:
+	./premier `echo 35-1*100*10000000/100 |bc` `echo 35*100*10000000/100-1 |bc` > list35.txt
+
+list36.txt:
+	./premier `echo 36-1*100*10000000/100 |bc` `echo 36*100*10000000/100-1 |bc` > list36.txt
+
+list37.txt:
+	./premier `echo 37-1*100*10000000/100 |bc` `echo 37*100*10000000/100-1 |bc` > list37.txt
+
+list38.txt:
+	./premier `echo 38-1*100*10000000/100 |bc` `echo 38*100*10000000/100-1 |bc` > list38.txt
+
+list39.txt:
+	./premier `echo 39-1*100*10000000/100 |bc` `echo 39*100*10000000/100-1 |bc` > list39.txt
+
+list40.txt:
+	./premier `echo 40-1*100*10000000/100 |bc` `echo 40*100*10000000/100-1 |bc` > list40.txt
+
+list41.txt:
+	./premier `echo 41-1*100*10000000/100 |bc` `echo 41*100*10000000/100-1 |bc` > list41.txt
+
+list42.txt:
+	./premier `echo 42-1*100*10000000/100 |bc` `echo 42*100*10000000/100-1 |bc` > list42.txt
+
+list43.txt:
+	./premier `echo 43-1*100*10000000/100 |bc` `echo 43*100*10000000/100-1 |bc` > list43.txt
+
+list44.txt:
+	./premier `echo 44-1*100*10000000/100 |bc` `echo 44*100*10000000/100-1 |bc` > list44.txt
+
+list45.txt:
+	./premier `echo 45-1*100*10000000/100 |bc` `echo 45*100*10000000/100-1 |bc` > list45.txt
+
+list46.txt:
+	./premier `echo 46-1*100*10000000/100 |bc` `echo 46*100*10000000/100-1 |bc` > list46.txt
+
+list47.txt:
+	./premier `echo 47-1*100*10000000/100 |bc` `echo 47*100*10000000/100-1 |bc` > list47.txt
+
+list48.txt:
+	./premier `echo 48-1*100*10000000/100 |bc` `echo 48*100*10000000/100-1 |bc` > list48.txt
+
+list49.txt:
+	./premier `echo 49-1*100*10000000/100 |bc` `echo 49*100*10000000/100-1 |bc` > list49.txt
+
+list50.txt:
+	./premier `echo 50-1*100*10000000/100 |bc` `echo 50*100*10000000/100-1 |bc` > list50.txt
+
+list51.txt:
+	./premier `echo 51-1*100*10000000/100 |bc` `echo 51*100*10000000/100-1 |bc` > list51.txt
+
+list52.txt:
+	./premier `echo 52-1*100*10000000/100 |bc` `echo 52*100*10000000/100-1 |bc` > list52.txt
+
+list53.txt:
+	./premier `echo 53-1*100*10000000/100 |bc` `echo 53*100*10000000/100-1 |bc` > list53.txt
+
+list54.txt:
+	./premier `echo 54-1*100*10000000/100 |bc` `echo 54*100*10000000/100-1 |bc` > list54.txt
+
+list55.txt:
+	./premier `echo 55-1*100*10000000/100 |bc` `echo 55*100*10000000/100-1 |bc` > list55.txt
+
+list56.txt:
+	./premier `echo 56-1*100*10000000/100 |bc` `echo 56*100*10000000/100-1 |bc` > list56.txt
+
+list57.txt:
+	./premier `echo 57-1*100*10000000/100 |bc` `echo 57*100*10000000/100-1 |bc` > list57.txt
+
+list58.txt:
+	./premier `echo 58-1*100*10000000/100 |bc` `echo 58*100*10000000/100-1 |bc` > list58.txt
+
+list59.txt:
+	./premier `echo 59-1*100*10000000/100 |bc` `echo 59*100*10000000/100-1 |bc` > list59.txt
+
+list60.txt:
+	./premier `echo 60-1*100*10000000/100 |bc` `echo 60*100*10000000/100-1 |bc` > list60.txt
+
+list61.txt:
+	./premier `echo 61-1*100*10000000/100 |bc` `echo 61*100*10000000/100-1 |bc` > list61.txt
+
+list62.txt:
+	./premier `echo 62-1*100*10000000/100 |bc` `echo 62*100*10000000/100-1 |bc` > list62.txt
+
+list63.txt:
+	./premier `echo 63-1*100*10000000/100 |bc` `echo 63*100*10000000/100-1 |bc` > list63.txt
+
+list64.txt:
+	./premier `echo 64-1*100*10000000/100 |bc` `echo 64*100*10000000/100-1 |bc` > list64.txt
+
+list65.txt:
+	./premier `echo 65-1*100*10000000/100 |bc` `echo 65*100*10000000/100-1 |bc` > list65.txt
+
+list66.txt:
+	./premier `echo 66-1*100*10000000/100 |bc` `echo 66*100*10000000/100-1 |bc` > list66.txt
+
+list67.txt:
+	./premier `echo 67-1*100*10000000/100 |bc` `echo 67*100*10000000/100-1 |bc` > list67.txt
+
+list68.txt:
+	./premier `echo 68-1*100*10000000/100 |bc` `echo 68*100*10000000/100-1 |bc` > list68.txt
+
+list69.txt:
+	./premier `echo 69-1*100*10000000/100 |bc` `echo 69*100*10000000/100-1 |bc` > list69.txt
+
+list70.txt:
+	./premier `echo 70-1*100*10000000/100 |bc` `echo 70*100*10000000/100-1 |bc` > list70.txt
+
+list71.txt:
+	./premier `echo 71-1*100*10000000/100 |bc` `echo 71*100*10000000/100-1 |bc` > list71.txt
+
+list72.txt:
+	./premier `echo 72-1*100*10000000/100 |bc` `echo 72*100*10000000/100-1 |bc` > list72.txt
+
+list73.txt:
+	./premier `echo 73-1*100*10000000/100 |bc` `echo 73*100*10000000/100-1 |bc` > list73.txt
+
+list74.txt:
+	./premier `echo 74-1*100*10000000/100 |bc` `echo 74*100*10000000/100-1 |bc` > list74.txt
+
+list75.txt:
+	./premier `echo 75-1*100*10000000/100 |bc` `echo 75*100*10000000/100-1 |bc` > list75.txt
+
+list76.txt:
+	./premier `echo 76-1*100*10000000/100 |bc` `echo 76*100*10000000/100-1 |bc` > list76.txt
+
+list77.txt:
+	./premier `echo 77-1*100*10000000/100 |bc` `echo 77*100*10000000/100-1 |bc` > list77.txt
+
+list78.txt:
+	./premier `echo 78-1*100*10000000/100 |bc` `echo 78*100*10000000/100-1 |bc` > list78.txt
+
+list79.txt:
+	./premier `echo 79-1*100*10000000/100 |bc` `echo 79*100*10000000/100-1 |bc` > list79.txt
+
+list80.txt:
+	./premier `echo 80-1*100*10000000/100 |bc` `echo 80*100*10000000/100-1 |bc` > list80.txt
+
+list81.txt:
+	./premier `echo 81-1*100*10000000/100 |bc` `echo 81*100*10000000/100-1 |bc` > list81.txt
+
+list82.txt:
+	./premier `echo 82-1*100*10000000/100 |bc` `echo 82*100*10000000/100-1 |bc` > list82.txt
+
+list83.txt:
+	./premier `echo 83-1*100*10000000/100 |bc` `echo 83*100*10000000/100-1 |bc` > list83.txt
+
+list84.txt:
+	./premier `echo 84-1*100*10000000/100 |bc` `echo 84*100*10000000/100-1 |bc` > list84.txt
+
+list85.txt:
+	./premier `echo 85-1*100*10000000/100 |bc` `echo 85*100*10000000/100-1 |bc` > list85.txt
+
+list86.txt:
+	./premier `echo 86-1*100*10000000/100 |bc` `echo 86*100*10000000/100-1 |bc` > list86.txt
+
+list87.txt:
+	./premier `echo 87-1*100*10000000/100 |bc` `echo 87*100*10000000/100-1 |bc` > list87.txt
+
+list88.txt:
+	./premier `echo 88-1*100*10000000/100 |bc` `echo 88*100*10000000/100-1 |bc` > list88.txt
+
+list89.txt:
+	./premier `echo 89-1*100*10000000/100 |bc` `echo 89*100*10000000/100-1 |bc` > list89.txt
+
+list90.txt:
+	./premier `echo 90-1*100*10000000/100 |bc` `echo 90*100*10000000/100-1 |bc` > list90.txt
+
+list91.txt:
+	./premier `echo 91-1*100*10000000/100 |bc` `echo 91*100*10000000/100-1 |bc` > list91.txt
+
+list92.txt:
+	./premier `echo 92-1*100*10000000/100 |bc` `echo 92*100*10000000/100-1 |bc` > list92.txt
+
+list93.txt:
+	./premier `echo 93-1*100*10000000/100 |bc` `echo 93*100*10000000/100-1 |bc` > list93.txt
+
+list94.txt:
+	./premier `echo 94-1*100*10000000/100 |bc` `echo 94*100*10000000/100-1 |bc` > list94.txt
+
+list95.txt:
+	./premier `echo 95-1*100*10000000/100 |bc` `echo 95*100*10000000/100-1 |bc` > list95.txt
+
+list96.txt:
+	./premier `echo 96-1*100*10000000/100 |bc` `echo 96*100*10000000/100-1 |bc` > list96.txt
+
+list97.txt:
+	./premier `echo 97-1*100*10000000/100 |bc` `echo 97*100*10000000/100-1 |bc` > list97.txt
+
+list98.txt:
+	./premier `echo 98-1*100*10000000/100 |bc` `echo 98*100*10000000/100-1 |bc` > list98.txt
+
+list99.txt:
+	./premier `echo 99-1*100*10000000/100 |bc` `echo 99*100*10000000/100-1 |bc` > list99.txt
+
+list100.txt:
+	./premier `echo 100-1*100*10000000/100 |bc` `echo 100*100*10000000/100-1 |bc` > list100.txt
